fix: show video on mobile

--- a/src/components/Banner2/Banner2.module.scss
+++ b/src/components/Banner2/Banner2.module.scss
@@ -110,7 +110,7 @@
       width: 100%;
       left: 20px;
       right: 20px;
-      bottom: 35%;
+      bottom: 38%;
     }
   }
 
